--- a/astrocalculator/astrocalc.web/ng/views/sunrises.html
+++ b/astrocalculator/astrocalc.web/ng/views/sunrises.html
@@ -6,7 +6,7 @@
                     <label for="select" class="control-label">
                         <h4><span class="glyphicon glyphicon-map-marker"></span> Place</h4>
                     </label>
-                    <select class="form-control" id="select" ng-model="model.city">
+                    <select class="form-control" id="select" ng-model="selection.city">
                         <option ng-repeat="c in model.citychoices" value="{{c.title}}">{{c.title}}</option>
                     </select>
                 </div>
@@ -40,12 +40,8 @@
                 <label for="select" class="pull-left control-label">
                     <h4><span class="glyphicon glyphicon-calendar"></span> Year</h4>
                 </label>
-                <select class="form-control" id="select">
-                    <option value="1996">1996</option>
-                    <option value="1997">1997</option>
-                    <option value="1998">1998</option>
-                    <option value="1999">1999</option>
-                    <option value="2000">2000</option>
+                <select class="form-control" id="select" ng-model="selection.year">
+                    <option ng-repeat="y in model.yearchoices" value="{{y}}">{{y}}</option>
                 </select>
                 <br>
             </div>
@@ -54,12 +50,8 @@
                 <label for="select" class="pull-left control-label">
                     <h4><span class="glyphicon glyphicon-calendar"></span> Month</h4>
                 </label>
-                <select class="form-control" id="select">
-                    <option value="January">January</option>
-                    <option value="February">February</option>
-                    <option value="March">March</option>
-                    <option value="April">April</option>
-                    <option value="May">May</option>
+                <select class="form-control" id="select" ng-model="selection.month">
+                    <option ng-repeat="m in model.monthchoices" value="{{m}}">{{m}}</option>
                 </select>
                 <br>
                 <br>
