code enhancement for #14

--- a/astrocalculator/astrocalc.web/ng/views/solarephemeris.html
+++ b/astrocalculator/astrocalc.web/ng/views/solarephemeris.html
@@ -8,7 +8,7 @@
                             <span class="glyphicon glyphicon-search"></span>
                         </span>
                         <!-- this is only for the user to enter the likely search phrase and when this changes we would get the suggestions out -->
-                        <input ng-model="cityLike" type="text" class="form-control" placeholder="Search for city">
+                        <input ng-model="cityLike" type="text" class="form-control" placeholder="Search for location">
                         <span class="input-group-btn">
                             <button class="btn btn-primary" type="button">
                                 <span class="glyphicon glyphicon-plus"></span>
