--- a/astrocalculator/astrocalc.web/ng/views/solarephemeris.html
+++ b/astrocalculator/astrocalc.web/ng/views/solarephemeris.html
@@ -1,95 +1,44 @@
-﻿<div class="col-lg-8 col-md-8 col-lg-offset-2 col-md-offset-2" ng-controller="ctrollerEphemeris">
-    <form class="form-horizontal well">
-        <fieldset>
+﻿
+<div class="row" ng-controller="ctrollerEphemeris">
+    <div class="col-md-4 col-md-offset-1 col-sm-12 col-xs-12">
+        <!-- this is where the input fields would be placed -->
+        <div class="row">
             <div class="col-md-10 col-md-offset-1">
-                <div class="form-group">
-                    <div class="input-group" ng-show="httpBody.lat==null||httpBody.lng==null">
-                        <span class="input-group-addon">
-                            <span class="glyphicon glyphicon-search"></span>
-                        </span>
-                        <!-- this is only for the user to enter the likely search phrase and when this changes we would get the suggestions out -->
-                        <input ng-model="cityLike" type="text" class="form-control" placeholder="Search for location">
-                        <span class="input-group-btn">
-                            <button class="btn btn-primary" type="button" ng-click="createLocation()">
-                                <span class="glyphicon glyphicon-plus"></span>
-                            </button>
-                        </span>
-                    </div>
-                    <ul class="nav nav-pills nav-stacked" ng-hide="httpBody.lat==null||httpBody.lng==null">
-                        <li class="active">
-                            <a>
-                                <h5>
-                                    {{httpBody.lat}} N, {{httpBody.lng}} E
-                                    <span ng-click="deselectCity()" class="pull-right glyphicon glyphicon-remove clickable"></span>
-                                </h5>
-                            </a>
-                        </li>
-                    </ul>
-
-                    <!-- Search suggestions.. -->
-                    <!-- this is diaplayed with a z index only when the search suggestions are being entered and the the number of suggestions is not zero -->
-                    <ul class="list-group flyout-list"
-                        ng-show="cityLike!=='' && cities.length!=0">
-                        <!-- this is each of the search suggestion  -->
-                        <li class="list-group-item clickable" ng-repeat="s in cities" ng-click="selectCity(s)">
-                            <h6>
-                                {{s.city}}
-                                <span class="pull-right">
-                                    {{s.state}}
-                                </span>
-                            </h6>
-                        </li>
-                    </ul>
-                </div>
+               <location-picker location="location"></location-picker>
             </div>
+        </div>
+        <div class="row">
+            <!-- this is where we would have the date and time selections -->
             <div class="col-md-10 col-md-offset-1">
-                <div class="form-group">
-                    <select class="form-control" id="select" ng-model="httpBody.yr">
-                        <option ng-repeat="y in years" value="{{y}}">{{y}}</option>
-                    </select>
-                </div>
+                <month-picker dt="dt"></month-picker>
+                <select class="form-control " id="select" ng-model="httpBody.zen">
+                    <option ng-repeat="z in zeniths" value="{{z.value}}">{{z.id}}</option>
+                </select>
             </div>
-            <div class="col-md-10 col-md-offset-1">
-                <div class="form-group">
-                    <select class="form-control" id="select" ng-model="httpBody.mn">
-                        <option ng-repeat="m in months" value="{{m.pos}}">{{m.id}}</option>
-                    </select>
-                </div>
-            </div>
-            <div class="col-md-10 col-md-offset-1">
-                <div class="form-group">
-                    <select class="form-control" id="select" ng-model="httpBody.zen">
-                        <option ng-repeat="z in zeniths" value="{{z.value}}">{{z.id}}</option>
-                    </select>
-                </div>
-            </div>
-            <div class="col-md-10 col-md-offset-1">
-                <button class="btn btn-block btn-primary" ng-click="getEphemeris()">
-                    <span class="glyphicon glyphicon-send"></span>
-                </button>
-            </div>
-        </fieldset>
-    </form>
-    <div style="max-height:20em; overflow-y:auto">
-        <table class="table table-hover table-responsive">
-            <thead>
-                <tr>
-                    <th><h4>Date</h4></th>
-                    <th><h4>Julian</h4></th>
-                    <th><h4>Sunrise</h4></th>
-                    <th><h4>Sunset</h4></th>
-                    <th><h4>Declination</h4></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="d in solartimes">
-                    <td>{{d.date|date:'dd-MMMM'}}</td>
-                    <td>{{d.julian}}</td>
-                    <td>{{d.sunrise|date:'HH:mm:ss'}}</td>
-                    <td>{{d.sunset|date:'HH:mm:ss'}}</td>
-                    <td>{{d.declination|angle:'deg min'}}</td>
-                </tr>
-            </tbody>
-        </table>
+        </div>
+    </div>
+    <div class="col-md-7">
+        <div style="max-height:20em; overflow-y:auto">
+            <table class="table table-hover table-responsive table-condensed">
+                <thead>
+                    <tr class="active">
+                        <th>Date</th>
+                        <th>Julian</th>
+                        <th>Sunrise</th>
+                        <th>Sunset</th>
+                        <th>Declination</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="d in solartimes">
+                        <td>{{d.date|date:'dd-MMMM'}}</td>
+                        <td>{{d.julian}}</td>
+                        <td>{{d.sunrise|date:'HH:mm:ss'}}</td>
+                        <td>{{d.sunset|date:'HH:mm:ss'}}</td>
+                        <td>{{d.declination|angle:'deg min'}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
 </div>
