--- a/astrocalculator/astrocalc.web/ng/views/solarephemeris.html
+++ b/astrocalculator/astrocalc.web/ng/views/solarephemeris.html
@@ -1,37 +1,46 @@
 ﻿
 <div class="row" ng-controller="ctrollerEphemeris">
-    <div class="col-md-4 col-md-offset-1 col-sm-12 col-xs-12">
-        <!-- this is where the input fields would be placed -->
-        <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-                <location-picker location="location"></location-picker>
-                <month-picker dt="dt"></month-picker>
-                <option-picker option="meridian" srv="svcWebapi.zenithSuggestions"></option-picker>
+    <section id="user-input">
+        <!-- this section is where all the user inputs are stored away -->
+        <div class="col-md-4 col-md-offset-1 col-sm-12 col-xs-12">
+            <div class="row">
+                <div class="col-md-10 col-md-offset-1">
+                    <section id="location-select" ng-hide="locationCreating==true">
+                        <location-picker location="location" create="locationCreating=true;"></location-picker>
+                        <month-picker dt="dt"></month-picker>
+                        <option-picker option="meridian" srv="svcWebapi.zenithSuggestions"></option-picker>
+                    </section>
+                    <section id="create-location" ng-show="locationCreating==true">
+                        <location-append location="location" created="locationCreating=false;"></location-append>
+                    </section>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-md-7">
-        <div style="max-height:30em; overflow-y:auto">
-            <table class="table table-hover table-responsive table-condensed">
-                <thead>
-                    <tr class="active">
-                        <th>Date</th>
-                        <th>Julian</th>
-                        <th>Sunrise</th>
-                        <th>Sunset</th>
-                        <th>Declination</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr ng-repeat="d in ephemeris">
-                        <td>{{d.date|date:'dd/MM'}}</td>
-                        <td>{{d.julian}}</td>
-                        <td>{{d.sunrise|date:'HH:mm:ss'}}</td>
-                        <td>{{d.sunset|date:'HH:mm:ss'}}</td>
-                        <td>{{d.declination|angle:'deg min'}}</td>
-                    </tr>
-                </tbody>
-            </table>
+    </section>
+    <section id="ephemeris-display">
+        <div class="col-md-7">
+            <div style="max-height:30em; overflow-y:auto">
+                <table class="table table-hover table-responsive table-condensed">
+                    <thead>
+                        <tr class="active">
+                            <th>Date</th>
+                            <th>Julian</th>
+                            <th>Sunrise</th>
+                            <th>Sunset</th>
+                            <th>Declination</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr ng-repeat="d in ephemeris">
+                            <td>{{d.date|date:'dd/MM'}}</td>
+                            <td>{{d.julian}}</td>
+                            <td>{{d.sunrise|date:'HH:mm:ss'}}</td>
+                            <td>{{d.sunset|date:'HH:mm:ss'}}</td>
+                            <td>{{d.declination|angle:'deg min'}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
-    </div>
+    </section>
 </div>
